--- a/css/carousel.css
+++ b/css/carousel.css
@@ -18,6 +18,7 @@
 
 .carousel-track {
     display: flex;
+    width: 100%;
     transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     will-change: transform;
     cursor: grab;
@@ -30,8 +31,8 @@
 }
 
 .carousel-slide {
-    min-width: 100%;
-    flex-shrink: 0;
+    flex: 0 0 100%;
+    width: 100%;
     position: relative;
 }
 
@@ -39,8 +40,8 @@
     width: 100%;
     height: auto;
     display: block;
-    object-fit: cover;
-    aspect-ratio: 16 / 9;
+    object-fit: contain;
+
 }
 
 .carousel-button {
